# liquidcrystal_i2c-linux

./: .gitignore  LICENSE  README.md  setup.cfg
src/liquidcrystal_i2c/: __init__.py  liquidcrystal_i2c.py
