[metadata]
name = liquidcrystal_i2c-linux
version = 0.0.1
author = Alessandro Campolo
author_email = campoloalex@gmail.com
description = Python port of the LiquidCrystal_I2C C++ library for Hitachi HD44780
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a13ssandr0/liquidcrystal_i2c-linux
project_urls =
    Bug Tracker = https://github.com/a13ssandr0/liquidcrystal_i2c-linux/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
install_requires =
    smbus
    re
    time

[options.packages.find]
where = src